# lawgrep

./: .gitignore  deepseek_client.py  enrich_cases.py  pyproject.toml
cases/: missing_cases.txt
cases/onsc/: 2024canlii116777  2024canlii118715  2024canlii120485  2024canlii121819  2024canlii129603  2024canlii138589  2024oncs6475  2024oncs6794  2024onsc1673  2024onsc3294  2024onsc4539  2024onsc5374  2024onsc5459  2024onsc5513  2024onsc5572  2024onsc5673  2024onsc5775  2024onsc5866  2024onsc5878  2024onsc5892  2024onsc5937  2024onsc6029  2024onsc6034  2024onsc6092  2024onsc6115  2024onsc6124  2024onsc6141  2024onsc6147  2024onsc6150  2024onsc6159  2024onsc6165  2024onsc6166  2024onsc6174  2024onsc6175  (+588 more)
frontend/: CLAUDE.md  package-lock.json  package.json
parsed/: 2024canlii121819.json  2024oncs6794.json  2024onsc6029.json  2024onsc6199.json  2024onsc6294.json  2024onsc6339.json  2024onsc6375.json  2024onsc6379.json  2024onsc6460.json  2024onsc6529.json  2024onsc6533.json  2024onsc6568.json  2024onsc6710.json  2024onsc6733.json  2024onsc6740.json  2024onsc6767.json  2024onsc6812.json  2024onsc6827.json  2024onsc6971.json  2024onsc7005.json  2024onsc7018.json  2024onsc7034.json  2024onsc7081.json  2024onsc7087.json  2024onsc7096.json  2024onsc7125.json  2024onsc7133.json  2024onsc7143.json  2024onsc7192.json  2024onsc7230.json  2024onsc7285.json  2024onsc7386.json  2025onsc1013.json  2025onsc1022.json  2025onsc1032.json  2025onsc1046.json  2025onsc1137.json  2025onsc1180.json  2025onsc1265.json  2025onsc1357.json  (+2 more)
src/: grok_schema.py  schema.py  schema.txt
(+10 files in other folders)
