[project]
name = "lawbot"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "sqlmodel",
    "johnllm @ file:///root/lawbot/nietzkit",
    "dotenv (>=0.9.9,<0.10.0)",
]


[tool.poetry.dependencies]
johnllm = {develop = true}

[tool.poetry]
packages = [
    {include = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
